k8sapps/htmldeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: sampleapp
  name: sampleapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sampleapp
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sampleapp
    spec:
      imagePullSecrets: # calling secrets 
      - name: ashusec # name of secret 
      containers:
      - image: phx.ocir.io/axmbtg8judkl/htmlapp:v1
        name: htmlapp
        resources: {}
status: {}
