k8sapps/webdbapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: ashudb
  name: ashudb # name of deployment 
spec:
  replicas: 1 # one replica 
  selector:
    matchLabels:
      app: ashudb
  strategy: {}
  template: # template to create POD 
    metadata:
      creationTimestamp: null
      labels:
        app: ashudb
    spec:
      volumes: # to create volumes inside k8s 
      - name: ashudbvol # name of volume 
        nfs: # type of volume 
         server: 172.31.85.128 # ip address of NFS storage server
         path: /data/ashu # location at NFS where db data will be stored 
      containers:
      - image: mysql:5.6
        name: mysql
        env: # update / create ENV variable 
        - name: MYSQL_ROOT_PASSWORD
          valueFrom: # reading password from secret 
           secretKeyRef: # call secret 
            name: dbsec # name of secret 
            key: sql_password # key of secret which hold password 
        volumeMounts: # to use above created Volume 
        - name: ashudbvol # volume name 
          mountPath: /var/lib/mysql/ # mounting inside db container 
        resources: {}
status: {}
# creating secret to use above
