k8sapps/exposesvc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ashuapp
  name: ashusvc1
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: ashuapp
  type: NodePort
status:
  loadBalancer: {}
